--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -1,15 +1,53 @@
-Black Goose Bistro
+<html>
 
-The Restaurant
-The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest ingredients.
+<head>
+  <meta charset="utf-8">
+  <title>Black Goose Bistro</title>
+  <style>
+  body {
+    background-color: #E7FEFF;
+    margin: 0 10%;
+    font-family: sans-serif;
+    }
+  h1 {
+    text-align: center;
+    font-family: serif;
+    font-weight: normal;
+    text-transform: uppercase;
+    border-bottom: 1px solid #57b1dc;
+    margin-top: 30px;
+  }
+  h2 {
+    color: #d1633c;
+    font-size: 1em;
+  }
+  </style>
+</head>
 
-Catering
-You have fun. We'll handle the cooking. Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.
+<body>
+  <h1><img src="blackgoose.png" alt="logo"><br />Black Goose
+Bistro</h1>
 
-Location and Hours
-Seekonk, Massachusetts;
-Monday through Thursday 11am to 9pm; Friday and Saturday, 11am to midnight
+  <h2>The Restaurant</h2>
+  <p>The Black Goose Bistro offers casual 
+launch and dinner fare in a hip atmospere.
+The menu changes regularly to highlight the 
+freshest ingredients.</p>
 
-Reviews
-This place is amazing and the food here is super delicious.- Melinell F.
+  <h2>Catering Services</h2>
+  <p>You have fun...<em>we'll do the 
+cooking</em>. Black Goose catering can
+handle events from snacks for bridge club
+to elegant corporate fundraisers.</p>
+  <h2>Location and Hours</h2>
+  <p>Seekonk, Massachusetts;
+    <br />Monday through Thursday 11am to
+9pm, <br />Friday and Saturday 11am to
+midnight</p>
+
+  <h2>Reviews</h2>
+  <p>This place is amazing and the food here is super delicious.- Melinell F.
+</body>
+
+</html>
   
