--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -1,53 +1,150 @@
+<!doctype html>
 <html>
-
 <head>
-  <meta charset="utf-8">
+<meta charset="utf-8">
   <title>Black Goose Bistro</title>
-  <style>
-  body {
-    background-color: #E7FEFF;
-    margin: 0 10%;
-    font-family: sans-serif;
+  <style> 
+    body {
+      background-color: #E7FEFF;
+      margin: 0 10%;
+      font-family: sans-serif;
+         }
+    h1 {
+      text-align: center;
+      font-family: serif;
+      font-weight: normal;
+      text-transform: uppercase;
+      border-bottom: 1px solid #57b1dc;
+      margin-top: 30px;
     }
-  h1 {
-    text-align: center;
-    font-family: serif;
-    font-weight: normal;
-    text-transform: uppercase;
-    border-bottom: 1px solid #57b1dc;
-    margin-top: 30px;
-  }
-  h2 {
-    color: #d1633c;
-    font-size: 1em;
-  }
+    h2 {
+      color: #d1633c;
+      font-size: 1.5em;
+    }
   </style>
 </head>
-
 <body>
-  <h1><img src="blackgoose.png" alt="logo"><br />Black Goose
-Bistro</h1>
-
+  <h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
+  <ul>  
+  <li><a href="index.html">Home</a></li>
+  <li><a href="jenskitchen/bgnews.html">Blog</a></li>
+  <li><a href="jenskitchen/index.html">Meet the Chef!</a></li>
+  <li><a href="jenskitchen/about.html">About</a></li>
+  
+  </ul>
   <h2>The Restaurant</h2>
-  <p>The Black Goose Bistro offers casual 
-launch and dinner fare in a hip atmospere.
-The menu changes regularly to highlight the 
-freshest ingredients.</p>
+The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest local ingredients.
 
-  <h2>Catering Services</h2>
-  <p>You have fun...<em>we'll do the 
-cooking</em>. Black Goose catering can
-handle events from snacks for bridge club
-to elegant corporate fundraisers.</p>
+  <h2>Catering</h2>You have fun. <em>We'll handle the cooking.</em>  Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.
+
   <h2>Location and Hours</h2>
-  <p>Seekonk, Massachusetts;
-    <br />Monday through Thursday 11am to
-9pm, <br />Friday and Saturday 11am to
-midnight</p>
-
-  <h2>Reviews</h2>
-  <p>This place is amazing and the food here is super delicious.- Melinell F.
+  Seekkonk, Massachusetts;
+  <br>Monday through Thursday 11am to 9pm; 
+  <br>Friday and Saturday, 11am to midnight</br>
+ 
+  <h2>Reviews</h2>
+<p>"This place is amazing and the food here is super delicious." - Melinell F.
 </body>
-
 </html>
-  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
