--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -27,8 +27,8 @@
   <h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
   <ul>  
   <li><a href="index.html">Home</a></li>
-  <li><a href="jenskitchen/bgnews.html">Blog</a></li>
-  <li><a href="jenskitchen/index.html">Meet the Chef!</a></li>
+  <li><a href="jenskitchen/bgnews.html">News</a></li>
+  <li><a href="jenskitchen/index.html">Jen's Kitchen</a></li>
   <li><a href="jenskitchen/about.html">About</a></li>
   
   </ul>
@@ -46,6 +46,36 @@ The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphe
 <p>"This place is amazing and the food here is super delicious." - Melinell F.
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
