--- a/blackgoose/jenskitchen/about.html
+++ b/blackgoose/jenskitchen/about.html
@@ -29,8 +29,8 @@
 <h1>About Jen&rsquo;s Kitchen </h1>
 <ul>  
   <li><a href="../index.html">Home</a></li>
-  <li><a href="bgnews.html">Blog</a></li>
-  <li><a href="index.html">Meet the Chef!</a></li>
+  <li><a href="bgnews.html">News</a></li>
+  <li><a href="index.html">Jen's Kitchen</a></li>
   <li><a href="about.html">About</a></li>
   
   </ul>
@@ -44,6 +44,75 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
