--- a/blackgoose/jenskitchen/index.html
+++ b/blackgoose/jenskitchen/index.html
@@ -34,8 +34,8 @@
 
 <ul>  
   <li><a href="../index.html">Home</a></li>
-  <li><a href="bgnews.html">Blog</a></li>
-  <li><a href="index.html">Meet the Chef!</a></li>
+  <li><a href="bgnews.html">News</a></li>
+  <li><a href="index.html">Jen's Kitchen</a></li>
   <li><a href="about.html">About</a></li>
   
   </ul>
@@ -58,6 +58,23 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
