--- a/blackgoose/jenskitchen/recipes/pasta/couscous.html
+++ b/blackgoose/jenskitchen/recipes/pasta/couscous.html
@@ -29,8 +29,8 @@
 <h1>Couscous Salad with Peas and Mint</h1>
 <ul>  
   <li><a href="../../../index.html">Home</a></li>
-  <li><a href="../../bgnews.html">Blog</a></li>
-  <li><a href="../../index.html">Meet the Chef!</a></li>
+  <li><a href="../../bgnews.html">News</a></li>
+  <li><a href="../../index.html">Jen's Kitchen</a></li>
   <li><a href="../../about.html">About</a></li>
   
   </ul>
@@ -59,6 +59,77 @@
 <p><a href="../salmon.html">Try this with Garlic Salmon</a></p>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
