--- a/blackgoose/jenskitchen/index.html
+++ b/blackgoose/jenskitchen/index.html
@@ -3,42 +3,44 @@
 <head>
 <meta charset="utf-8">
 <title>Jen's Kitchen</title>
-<style> 
-    body {
-      background-color: #E7FEFF;
-      margin: 0 10%;
-      font-family: sans-serif;
-         }
-    h1 {
-      text-align: center;
-      font-family: serif;
-      font-weight: normal;
-      text-transform: uppercase;
-      border-bottom: 1px solid #57b1dc;
-      margin-top: 30px;
+
+<style>
+  body {
+    background-color: #E7FEFF;
+    margin: 0 10%;
+    font-family: sans-serif;
     }
-    h2 {
-      color: #d1633c;
-      font-size: 1.5em;
-    }
+  h1 {
+    text-align: center;
+    font-family: serif;
+    font-weight: normal;
+    text-transform: uppercase;
+    border-bottom: 1px solid #57b1dc;
+    margin-top: 30px;
+   }
+  h2 {
+    color: #d1633c;
+    font-size: 1em;
+   }
+  h3 {
+  text-align:center
+  }
   </style>
 
 </head>
 
 <body>
-<img src="images/jenskitchen.gif" alt="Jen's Kitchen banner" width="660" height="94">
-
+<h3><img src="images/jenskitchen.gif" alt="Jen's Kitchen banner" width="660" height="94"></h3>
 <h1>Welcome to Jen&rsquo;s Kitchen</h1>
+<ul>
+<li><a href="../index.html">Home</a></li>
+<li><a href="index.html">Jen's Kitchen</a></li>
+<li><a href="bgnews.html">News</a></li>
+<li><a href="about.html">About</a></li>
+</ul>
 
 <p>People who know me know that I love to cook. I've created this site to share some of my favorite recipes and online food resources. <i>Bon Appetit!</i> </p>
 
-<ul>  
-  <li><a href="../index.html">Home</a></li>
-  <li><a href="bgnews.html">News</a></li>
-  <li><a href="index.html">Jen's Kitchen</a></li>
-  <li><a href="about.html">About</a></li>
-  
-  </ul>
 
 <h2>From Jen&rsquo;s Cookbook</h2>
 <ul>
@@ -58,6 +60,130 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
