--- a/blackgoose/jenskitchen/recipes/pasta/couscous.html
+++ b/blackgoose/jenskitchen/recipes/pasta/couscous.html
@@ -29,10 +29,10 @@
 <h1>Couscous Salad with Peas and Mint</h1>
 <ul>  
   <li><a href="../../../index.html">Home</a></li>
-  <li><a href="../../index.html">Jen's Kitchen</a></li>
-  <li><a href="../../bgnews.html">News</a></li>
-  <li><a href="../../about.html">About</a></li>
-  
+  <li><a href="../../news.html">News</a></li>
+  <li><a href="../../about.html">About Jen</a></li>
+  <li><a href="../../gallery/gallery.html">Gallery</a></li>
+  <li><a href="../../glossary.html">Glossary</a></li>
   </ul>
 <p>This is barely a &ldquo;recipe&rdquo; since I just threw it together and didn't pay much attention to measurements. But it turned out to be pretty tasty, so I thought I'd share. It's not the kind of thing where exact measurements are that crucial anyway, so use your best judgment and personal taste.</p>
 <ul>
@@ -59,6 +59,164 @@
 <p><a href="../salmon.html">Try this with Garlic Salmon</a></p>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
