--- a/blackgoose/jenskitchen/recipes/pasta/linguine.html
+++ b/blackgoose/jenskitchen/recipes/pasta/linguine.html
@@ -28,9 +28,10 @@
 <h1>Linguine with Clam Sauce</h1>
 <ul>  
   <li><a href="../../../index.html">Home</a></li>
-  <li><a href="../../index.html">Jen's Kitchen</a></li>
-  <li><a href="../../bgnews.html">News</a></li>
-  <li><a href="../../about.html">About</a></li>
+  <li><a href="../../news.html">News</a></li>
+  <li><a href="../../about.html">About Jen</a></li>
+  <li><a href="../../gallery/gallery.html">Gallery</a></li>
+  <li><a href="../../glossary.html">Glossary</a></li>
   
   </ul>
 <p>I don't know how authentic this recipe is, but it's quick and delicious. You can make it lactose-free by substituting a dairy-free margarine (we like Earth's Balance) for the butter. (Unfortunately, butter is better.) This recipe serves 2.</p>
@@ -56,6 +57,174 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
