--- a/blackgoose/jenskitchen/recipes/salmon.html
+++ b/blackgoose/jenskitchen/recipes/salmon.html
@@ -29,9 +29,10 @@
 <h1>Garlic  Salmon</h1>
 <ul>  
   <li><a href="../../index.html">Home</a></li>
-  <li><a href="../index.html">Jen's Kitchen</a></li>
-  <li><a href="../bgnews.html">News</a></li>
-  <li><a href="../about.html">About</a></li>
+  <li><a href="../news.html">News</a></li>
+  <li><a href="../about.html">About Jen</a></li>
+  <li><a href="../gallery/gallery.html">Gallery</a></li>
+  <li><a href="../glossary.html">Glossary</a></li>
   
   </ul>
 <p>This is one of my favorite recipes for when folks come over for dinner. I've already shared this popular recipe with many of my friends. The best thing is it's <em>so easy</em> to make!</p>
@@ -54,6 +55,173 @@
 <p><a href="tapenade.html">Go to the Tapenade recipie</a></p>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
