--- a/blackgoose/jenskitchen/recipes/tapenade.html
+++ b/blackgoose/jenskitchen/recipes/tapenade.html
@@ -30,9 +30,10 @@
 <h1>Tapenade (Olive Spread)</h1>
 <ul>  
   <li><a href="../../index.html">Home</a></li>
-  <li><a href="../index.html">Jen's Kitchen</a></li>
-  <li><a href="../bgnews.html">News</a></li>
-  <li><a href="../about.html">About</a></li>
+  <li><a href="../news.html">News</a></li>
+  <li><a href="../about.html">About Jen</a></li>
+  <li><a href="../gallery/gallery.html">Gallery</a></li>
+  <li><a href="../glossary.html">Glossary</a></li>
   
   </ul>
 <p>This is a really simple dish to prepare and it's always a big hit at parties. My father recommends:</p>
@@ -64,6 +65,174 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
