--- a/blackgoose/jenskitchen/gallery/gallery.html
+++ b/blackgoose/jenskitchen/gallery/gallery.html
@@ -37,7 +37,7 @@ h2 {
   <li><a href="../news.html">News</a></li>
   <li><a href="../about.html">About Jen</a></li>
   <li><a href="gallery.html">Gallery</a></li>
-  <li><a href="../glossary.html" target="_blank">Glossary</a></li>
+  <li><a href="../glossary.html">Glossary</a></li>
   </ul>
 </nav>
 </header>
@@ -70,6 +70,33 @@ Try our freshly made tabouleh, made with local tomatoes and onions. An excellent
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
