--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -54,7 +54,7 @@ footer img {
 <li><a href="jenskitchen/news.html">News</a></li>
 <li><a href="jenskitchen/about.html">About Jen</a></li>
 <li><a href="jenskitchen/gallery/gallery.html">Gallery</a></li>
-<li><a href="jenskitchen/glossary.html">Glossary</a></li>
+<li><a href="jenskitchen/glossary.html" target="_blank">Glossary</a></li>
 </ul>
 </nav>
 </header>
@@ -84,6 +84,17 @@ midnight</p>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
