--- a/blackgoose/jenskitchen/about.html
+++ b/blackgoose/jenskitchen/about.html
@@ -42,7 +42,7 @@ About Jen&rsquo;s Kitchen </h1>
 <li><a href="news.html">News</a></li>
 <li><a href="about.html">About Jen</a></li>
 <li><a href="gallery/gallery.html">Gallery</a></li>
-<li><a href="glossary.html">Glossary</a></li>
+<li><a href="glossary.html" target="_blank">Glossary</a></li>
 </ul>
 </nav>
 </header>
@@ -79,6 +79,28 @@ About Jen&rsquo;s Kitchen </h1>
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
