--- a/blackgoose/jenskitchen/glossary.html
+++ b/blackgoose/jenskitchen/glossary.html
@@ -32,7 +32,7 @@ h2 {
 <li><a href="news.html">News</a></li>
 <li><a href="about.html">About Jen</a></li>
 <li><a href="gallery/gallery.html">Gallery</a></li>
-<li><a href="glossary.html">Glossary</a></li>
+<li><a href="glossary.html" target="_blank">Glossary</a></li>
 </ul>
 </nav>
 </header>
@@ -287,6 +287,33 @@ h2 {
 <p><a href="#top">TOP</a></p>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
