--- a/resume/index.html
+++ b/resume/index.html
@@ -1,1 +1,48 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>index.html</title>
+</head>
 
+<body>
+<h1>Hello There</h1>
+<p>My name is Melinell Feliciano, I am a college student that is working towards an AS degree. I graduated from Revival Christian Academy, and I love everything in the design field. In my spare time I sometimes draw, paint, and do designs in my computer. My dream is to become a professional illustrator or an animator. I have a little experience in some adobe programs, but I'm still practicing and learning them.</p>
+<h2>Skills</h2>
+<ul>
+<li>Illustrations</li>
+<li>Graphic Design</li>
+<li>Animation</li>
+<li>Video Editing</li>
+<li>Photo Editing</li>
+<li>Photography</li>
+<li>HTML</li>
+<li>Ads Design</li>
+<li>Storyboarding</li>
+</ul>
+<h2>Software/Hardware</h2>
+<ul>
+<li>Adobe Illustrator</li> 
+<li>Adobe Photoshop</li>
+<li>Adobe Animator</li>
+<li>Adobe Dreamweaver</li>
+<li>Adobe Spark</li>
+<li>Microsoft Office</li>
+<li>Canva</li>
+</ul>
+<h2>Social Media</h2>
+<ul>
+<li><a href="https://github.com/melinellf21">My Github</a></li>
+
+</ul>
+<h2>Work Samples</h2>
+<img src="Images/Animal Morph Magazine.jpg" alt="A animal morph on a magazine cover" width="300px">
+<img src="Images/Animation.gif" alt="A animation of a bouncing ball" width="300px">
+<img src="Images/cute ice cream.png" alt="A cute ice cream design" width="300px">
+<img src="Images/Hot sauce ad.jpg" alt="A hot sauce ad" width="300px">
+<img src="Images/travel ad.png" alt="A New York travel ad" width="300px">
+
+
+  
+</body>
+</html>
