--- a/resume/index.html
+++ b/resume/index.html
@@ -39,7 +39,7 @@
 <img src="images/Animal Morph Magazine.jpg" alt="A animal morph on a magazine cover" width="300px">
 <img src="images/Animation.gif" alt="A animation of a bouncing ball" width="300px">
 <img src="images/cute ice cream.png" alt="A cute ice cream design" width="300px">
-<img src="images/Hot sauce ad.jpg" alt="A hot sauce ad" width="300px">
+<img src="images/Hot Sauce Ad.jpg" alt="A hot sauce ad" width="300px">
 <img src="images/travel ad.png" alt="A New York travel ad" width="300px">
 
 
