--- a/resume/index.html
+++ b/resume/index.html
@@ -16,6 +16,7 @@
 <li>Video Editing</li>
 <li>Photo Editing</li>
 <li>Photography</li>
+<li>Web Design</li>
 <li>HTML</li>
 <li>Ads Design</li>
 <li>Storyboarding</li>
