--- a/resume/hot sauce ad.html
+++ b/resume/hot sauce ad.html
@@ -22,8 +22,8 @@ h1 {
 
 <body>
 
-<h1>Cute Ice Cream</h1>
-<p><img src="images/cute ice cream.png" alt="Cute Ice Cream: Full Size" width="400" height=""></p>
+<h1>Hot Sauce Ad</h1>
+<p><img src="images/Hot Sauce Ad.jpg" alt="Hot Sauce Ad: Full Size" width="600" height=""></p>
 <p><a href="index.html">[Back to Resume]</a></p>
 </body>
 </html>
