--- a/resume/index.html
+++ b/resume/index.html
@@ -37,11 +37,13 @@
 
 </ul>
 <h2>Work Samples</h2>
-<img src="images/Animal Morph Magazine.jpg" alt="A animal morph on a magazine cover" width="300px">
-<img src="images/Animation.gif" alt="A animation of a bouncing ball" width="300px">
-<img src="images/cute ice cream.png" alt="A cute ice cream design" width="300px">
-<img src="images/Hot Sauce Ad.jpg" alt="A hot sauce ad" width="300px">
-<img src="images/travel ad.png" alt="A New York travel ad" width="300px">
+<p>
+  <a href="animal morph magazine.html"><img src="images/Animal Morph Magazine.jpg" alt="A animal morph on a magazine cover" width="200" height="200"></a>
+  <a href="bouncing ball.html"><img src="images/Animation.gif" alt="bouncing ball" width="200" height="200"></a>
+  <a href="cute ice cream.html"><img src="images/cute ice cream.png" alt="cute ice cream" width="200" height="200"></a>
+  <a href="hot sauce ad.html"><img src="images/Hot Sauce Ad.jpg" alt="hot sauce ad" width="200" height="200"></a>
+  <a href="travel ad.html"><img src="images/travel ad.png" alt="travel ad" width="200" height="200"></a>
+</p>
 
 
   
