--- a/resume/bouncing ball.html
+++ b/resume/bouncing ball.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
 
+<html>
+
+<head>
+<meta charset="UTF-8">
+<title>Resume Gallery</title>
+<style>
+body {
+  margin: 0 10%;
+  text-align: center;
+  }
+
+h1 {
+  text-align: center;
+  font-weight: normal;
+  border-bottom: 1px solid #CCC;
+  margin-top: 30px;
+}
+</style>
+</head>
+
+<body>
+
+<h1>Bouncing Ball</h1>
+<p><img src="images/Animation.gif" alt="Bouncing Ball: Full Size" width="600" height=""></p>
+<p><a href="index.html">[Back to Resume]</a></p>
+</body>
+</html>
