--- a/resume/travel ad.html
+++ b/resume/travel ad.html
@@ -22,8 +22,8 @@ h1 {
 
 <body>
 
-<h1>Cute Ice Cream</h1>
-<p><img src="images/cute ice cream.png" alt="Cute Ice Cream: Full Size" width="400" height=""></p>
+<h1>Travel Ad</h1>
+<p><img src="images/travel ad.png" alt="travel ad: Full Size" width="500" height=""></p>
 <p><a href="index.html">[Back to Resume]</a></p>
 </body>
 </html>
