--- a/table/index.html
+++ b/table/index.html
@@ -23,7 +23,7 @@
   <tbody>
   <tr>
     <th scope="row">1</th>
-    <td>Burj Khalifa<br><br><img src="images/Burj Khalifa.JFIF" alt="" width="240" height="300"> </td>
+    <td>Burj Khalifa<br><br><img src="images/Burj Khalifa.jfif" alt="" width="240" height="300"> </td>
     <td>&nbsp;Dubai</td>
     <td>&nbsp;2,717ft (828m)</td>
     <td>&nbsp;163</td>
@@ -31,7 +31,7 @@
   </tr>
   <tr>
     <th scope="row">2</th>
-    <td>Shanghai Tower<br><br><img src="images/Shanghai Tower.JFIF" alt="" width="240" height="300"></td>
+    <td>Shanghai Tower<br><br><img src="images/Shanghai Tower.jfif" alt="" width="240" height="300"></td>
     <td>&nbsp;Shanghai</td>
     <td>&nbsp;2,073ft (632m)</td>
     <td>&nbsp;128</td>
@@ -39,7 +39,7 @@
   </tr>
   <tr>
     <th scope="row">3</th>
-    <td>Makkah Royal Clock Tower &nbsp;<br><br><img src="images/Makkah Royal Clock Tower.JFIF" alt="" width="240" height="300"></td>
+    <td>Makkah Royal Clock Tower &nbsp;<br><br><img src="images/Makkah Royal Clock Tower.jfif" alt="" width="240" height="300"></td>
     <td>&nbsp;Mecca, <br>&nbsp;Saudi Arabia</td>
     <td>&nbsp;1,972ft (601m) &nbsp;</td>
     <td>&nbsp;120</td>
@@ -47,7 +47,7 @@
   </tr>
   <tr>
     <th scope="row">4</th>
-    <td>Ping An Finance Center<br><br><img src="images/Ping An Finance Center.JFIF" alt="" width="240" height="300"></td>
+    <td>Ping An Finance Center<br><br><img src="images/Ping An Finance Center.jfif" alt="" width="240" height="300"></td>
     <td>&nbsp;Shenzhen</td>
     <td>&nbsp;1,965ft (599m)</td>
     <td>&nbsp;115</td>
@@ -55,7 +55,7 @@
   </tr>
   <tr>
     <th scope="row">5</th>
-    <td>Lotte World Tower<br><br><img src="images/Lotte World Tower.PNG" alt="" width="240" height="300"></td>
+    <td>Lotte World Tower<br><br><img src="images/Lotte World Tower.png" alt="" width="240" height="300"></td>
     <td>&nbsp;Seoul &nbsp;</td>
     <td>&nbsp;1,819ft (554.5m)</td>
     <td>&nbsp;123</td>
@@ -63,7 +63,7 @@
   </tr>
 <tr>
     <th scope="row">6</th>
-    <td>One World Trade Center<br><br><img src="images/One World Trade Center.PNG" alt="" width="240" height="300"></td>
+    <td>One World Trade Center<br><br><img src="images/One World Trade Center.png" alt="" width="240" height="300"></td>
     <td>&nbsp;New York</td>
     <td>&nbsp;1,776ft (541.3m)</td>
     <td>&nbsp;94</td>
@@ -71,7 +71,7 @@
   </tr>
 <tr>
     <th scope="row">7</th>
-    <td>Guangzhou CTF Finance Centre<br><br><img src="images/Guangzhou CTF Finance Centre.JFIF" alt="" width="240" height="300"></td>
+    <td>Guangzhou CTF Finance Centre<br><br><img src="images/Guangzhou CTF Finance Centre.jfif" alt="" width="240" height="300"></td>
     <td>&nbsp;Guangzhou</td>
     <td>&nbsp;1,739ft (530m)</td>
     <td>&nbsp;111</td>
@@ -79,7 +79,7 @@
   </tr>
  <tr>
     <th scope="row">8</th>
-    <td>Tianjin CTF Finance Centre<br><br><img src="images/Tianjin CTF Finance Centre.JFIF" alt="" width="240" height="300"></td>
+    <td>Tianjin CTF Finance Centre<br><br><img src="images/Tianjin CTF Finance Centre.jfif" alt="" width="240" height="300"></td>
     <td>&nbsp;Tianjin</td>
     <td>&nbsp;1,740ft (530m)</td>
     <td>&nbsp;97</td>
