--- a/table/index.html
+++ b/table/index.html
@@ -4,6 +4,7 @@
  <style>
   td, th {border: 1px solid #51b4b8;}
   table {border:4px solid #0b6d70; }
+  table { background-color:#DBF3FA;}
  </style>
 </head>
 <body>
