--- a/blackgoose/pizza.html
+++ b/blackgoose/pizza.html
@@ -23,7 +23,7 @@
 <p>Our 12" wood-fired pizzas are avaiable for delivery. Build your custom pizza and we'll deliver it within an hour.</p>
 
 
-<form action="thank you order.html" method="post">
+<form action="pizza/thank you order.html" method="post">
 
 <fieldset>
   <legend>Your Information</legend>
@@ -88,6 +88,19 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
