--- a/blackgoose/pizza.html
+++ b/blackgoose/pizza.html
@@ -80,7 +80,7 @@
 
 </fieldset> <!-- closes 'Pizza Specs' fieldset -->
 
-<p><input type="submit" value="Bring me a pizza!">
+<p><input type="submit" href="pizza/thank you order"value="Bring me a pizza!">
 <input type="reset"></p>
 
 </form>
@@ -88,6 +88,8 @@
 
 </body>
 </html>
+
+
 
 
 
