--- a/blackgoose/pizza.html
+++ b/blackgoose/pizza.html
@@ -23,7 +23,7 @@
 <p>Our 12" wood-fired pizzas are avaiable for delivery. Build your custom pizza and we'll deliver it within an hour.</p>
 
 
-<form action="pizza/thank you order.html" method="post">
+<form action="pizza/thank you order.html">
 
 <fieldset>
   <legend>Your Information</legend>
