--- a/blackgoose/pizza.html
+++ b/blackgoose/pizza.html
@@ -6,11 +6,24 @@
    <style>
     body {
   background-color: #E7FEFF;
-   </style>
-   <style type="text/css">
-      ol, ul { 
-     list-style-type: none;
-      }
+  margin: 0 10%;
+  font-family: sans-serif;
+     }
+   h1 {
+     text-align: center;
+     font-family: serif;
+     font-weight: normal;
+     text-transform: uppercase;
+     border-bottom: 1px solid #57b1dc;
+     margin-top: 30px;
+   }
+   h2 {
+     color: #d1633c;
+     font-size: 1em;
+   }
+   fieldset {
+     border-color: #57b1dc;
+   }
    </style>
 
 </head>
@@ -82,9 +95,9 @@
 
 <p><input type="submit" href="pizza/thank you order"value="Bring me a pizza!">
 <input type="reset"></p>
-
+<p><a href="index.html">[Back to Main Page]</a></p>
 </form>
- <center><a href="index.html">[back to main page]</a></center>
+ 
 
 </body>
 </html>
