--- a/blackgoose/pizza.html
+++ b/blackgoose/pizza.html
@@ -94,7 +94,7 @@
 
 <p><input type="submit" href="pizza/thank you order"value="Bring me a pizza!">
 <input type="reset"></p>
-<center><a href="index.html">[Back to Main Page]</a></center>
+<p><a href="index.html">[Back to Main Page]</a></p>
 </form>
  
 
