--- a/blackgoose/jenskitchen/about.html
+++ b/blackgoose/jenskitchen/about.html
@@ -1,32 +1,67 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-
-<meta charset="utf-8">
-
 <title>About Jen's Kitchen</title>
+ </head><body><div class="list">
+<a href="../index.html">Home</a>
+<a href="news.html">News</a>
+<a href="about.html">About Jen</a>
+<a href="gallery/gallery.html">Gallery</a>
+<a href="glossary.html" target="_blank">Glossary</a>
+  </div>
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Kurale&display=swap');
 body {
   background-color: #E7FEFF;
   margin: 0 10%;
   font-family: sans-serif;
-}
+  }
+
 h1 {
   text-align: center;
-  font-family: serif;
-  font-weight: normal;
-  text-transform: uppercase;
-  border-bottom: 1px solid #57b1dc;
-  margin-top: 30px
+  font-family: 'Kurale', serif;
+  text-transform: ;
+  border-bottom: 5px solid #57b1dc;
+  margin-top: 30px;
 }
-h2 {
-  color: #d1633c;
-  font-size: 1em;
-}
-</style>
 
+h2 {
+  color: #194d8c;
+  font-size: 30px;
+}
+.list {
+    font-size: 20px;
+}
+.list {
+  background-color: ;
+  overflow: hidden;
+}
+
+
+.list a {
+  float: left;
+  color: #194d8c;
+  text-align: center;
+  padding: 14px 16px ;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+
+.list a:hover {
+  background-color: #d28840;
+  color: black;
+}
+
+
+.list a.active {
+  background-color:  #784b23;
+  color: white;
+}
+
+.list a.active {
+  background-color:  #784b23;
+  color: white;
+}
+   
+</style>
 
 </head>
 
@@ -36,15 +71,7 @@ h2 {
 
 
 About Jen&rsquo;s Kitchen </h1>
-<nav>
-<ul>
-<li><a href="../index.html">Home</a></li>
-<li><a href="news.html">News</a></li>
-<li><a href="about.html">About Jen</a></li>
-<li><a href="gallery/gallery.html">Gallery</a></li>
-<li><a href="glossary.html" target="_blank">Glossary</a></li>
-</ul>
-</nav>
+
 </header>
 <p>People who know me know that I love to cook. I've created this site to share some of my favorite recipes and online food resources. <i>Bon Appetit!</i> </p>
 
@@ -66,7 +93,7 @@ About Jen&rsquo;s Kitchen </h1>
 </ul>
 <h2>Good Food on the Web</h2>
 <ul>
-    <li>The Food Network</li>
+    <li><a href="http://www.foodnetwork.com/">The Food Network</a></li>
     <li><a href="http://www.epicurious.com/">Epicurious</a></li>
     <li><a href="http://www.allrecipes.com/">Allrecipes.com</a></li>
 </ul>
@@ -190,288 +217,8 @@ About Jen&rsquo;s Kitchen </h1>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  
+    
 
 
 
