--- a/blackgoose/jenskitchen/glossary.html
+++ b/blackgoose/jenskitchen/glossary.html
@@ -1,46 +1,94 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
 <title>Glossary</title>
+</head><body><div class="list">
+     <a href="../index.html">Home</a>
+     <a href="news.html">News</a>
+     <a href="about.html">About Jen</a>
+     <a href="gallery/gallery.html">Gallery</a>
+     <a href="glossary.html" target="_blank">Glossary</a>
+ 
+  </div>
+
 <style>
+   @import url('https://fonts.googleapis.com/css2?family=Kurale&display=swap');
 body {
   background-color: #E7FEFF;
   margin: 0 10%;
   font-family: sans-serif;
-}
+  }
+
 h1 {
   text-align: center;
-  font-family: serif;
-  font-weight: normal;
-  text-transform: uppercase;
-  border-bottom: 1px solid #57b1dc;
-  margin-top: 30px
+  font-family: 'Kurale', serif;
+  text-transform: ;
+  border-bottom: 5px solid #57b1dc;
+  margin-top: 30px;
 }
-h2 {
-  color: #d1633c;
-  font-size: 1em;
-}
-</style>
-</head>
-<body>
-<header>
-<h1 id="top">Glossary</h1>
-<nav>
-<ul>
-<li><a href="../index.html">Home</a></li>
-<li><a href="news.html">News</a></li>
-<li><a href="about.html">About Jen</a></li>
-<li><a href="gallery/gallery.html">Gallery</a></li>
-<li><a href="glossary.html" target="_blank">Glossary</a></li>
-</ul>
-</nav>
-</header>
 
-<p><a href="#startA">A</a> | <a href="#startB">B</a> | <a href="#startC">C</a> | <a href="#startD">D</a> | <a href="#startE">E</a> | <a href="#startF">F</a> | <a href="#startG">G</a> |
-  <a href="#startH">H</a> | <a href="#startI">I</a> | <a href="#startJ">J</a> | <a href="#startL">L</a> | <a href="#startM">M</a> | <a href="#startN">N</a> | <a href="#startO">O</a> |
-  <a href="#startP">P</a> | <a href="#startQ">Q</a> | <a href="#startR">R</a> | <a href="#startS">S</a> | <a href="#startT">T</a> | <a href="#startU">U</a> | <a href="#startV">V</a> |
-  <a href="#startW">W</a> | <a href="#startX">X</a></p>
+h2 {
+  color: #194d8c;
+  font-size: 30px;
+}
+.list {
+  background-color: ;
+  overflow: hidden;
+}
+
+
+.list a {
+  float: left;
+  color: #194d8c;
+  text-align: center;
+  padding: 14px 16px ;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+
+.list a:hover {
+  background-color: #d28840;
+  color: white;
+}
+
+
+.list a.active {
+  background-color:  #194d8c;
+  color: white;
+}
+
+</style>
+
+
+<h1 id="top">Glossary</h1>
+
+<p>
+
+<a href="#startA">A</a> 
+| <a href="#startB">B</a>
+| <a href="#startC">C</a>
+| <a href="#startD">D</a> 
+| <a href="#startE">E</a> 
+| <a href="startF">F</a> 
+| <a href="#startG">G</a> 
+| <a href="#startH">H</a> 
+| <a href="#startI">I</a> 
+| <a href="#startJ">J</a> 
+| <a href="#startL">L</a> 
+| <a href="#startM">M</a> 
+| <a href="#startN">N</a> 
+| <a href="#startO">O</a> 
+| <a href="#startP">P</a> 
+| <a href="#startQ">Q</a> 
+| <a href="#startR">R</a> 
+| <a href="#startS">S</a> 
+| <a href="#startT">T</a> 
+| <a href="#startU">U</a> 
+| <a href="#startV">V</a> 
+| <a href="#startW">W</a> 
+| <a href="#startX">X</a>
+</p>
 
 <h2 id="startA">A</h2>
 
@@ -60,6 +108,7 @@ h2 {
 
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startB">B</h2>
 
 <dl>
@@ -73,6 +122,7 @@ h2 {
 <dd>The client software that requests and displays web pages.</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startC">C</h2>
 
 <dl>
@@ -89,6 +139,8 @@ h2 {
 <dd>A method for reducing the file size of a document. Different file formats use different compression techniques</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
+
 <h2 id="startD">D</h2>
 
 <dl>
@@ -102,6 +154,8 @@ h2 {
 <dd>A name that corresponds to a specific IP address.</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
+
 <h2 id="startE">E</h2>
 
 <dl>
@@ -109,6 +163,7 @@ h2 {
 <dd>A web site or system that is available within a closed system and to select users outside that system, usually via a password.</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startF">F</h2>
 
 <dl>
@@ -123,6 +178,7 @@ h2 {
 
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startG">G</h2>
 
 <dl>
@@ -134,6 +190,7 @@ h2 {
 
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startH">H</h2>
 <dl>
 <dt>hexadecimal</dt>
@@ -149,6 +206,8 @@ h2 {
 <dd>Hypertext Transfer Protocol; the system that defines how web pages and media are requested and transferred between servers and browsers.</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
+
 <h2 id="startI">I</h2>
 
 <dl>
@@ -163,6 +222,7 @@ h2 {
 
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startJ">J</h2>
 
 <dl>
@@ -172,14 +232,18 @@ h2 {
 <dt>JavaScript</dt>
 <dd>A scripting language that adds behaviors to elements on web pages and browsers.</dd>
 </dl>
+
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startL">L</h2>
 
 <dl>
 <dt>lossy</dt>
 <dd>A type of compression in which data is thrown out to reduce file size. The JPEG format uses a lossy compression scheme.</dd>
 </dl>
+
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startM">M</h2>
 <dl>
 <dt>MP3</dt>
@@ -189,6 +253,8 @@ h2 {
 <dd>A family of multimedia standards created by the Motion Picture Experts Group</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
+
 <h2 id="startN">N</h2>
 
 <dl>
@@ -196,12 +262,14 @@ h2 {
 <dd>Placing one HTML element within another. HTML and XHTML define rules for what elements may be nested within another.</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startO">O</h2>
 <dl>
 <dt>optimizing</dt>
 <dd>Reducing file size to improve transfer time over the network.</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startP">P</h2>
 <dl>
 <dt>palette</dt>
@@ -217,12 +285,14 @@ h2 {
 <dd>Portable Network Graphic; a graphic file format that features support for 8-bit and 24 bit images</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startQ">Q</h2>
 <dl>
 <dt>QuickTime</dt>
 <dd>An audio and video format developed by Apple Computer and available for all platforms</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startR">R</h2>
 <dl>
 <dt>resolution</dt>
@@ -235,6 +305,7 @@ h2 {
 <dd>The top-level directory for a web site. The root directory contains all the files and subdirectories for a site.</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startS">S</h2>
 
 <dl>
@@ -245,12 +316,14 @@ h2 {
 <dd>A font that has horizontal slabs at the ends of character strokes. Times is an example</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startT">T</h2>
 <dl>
 <dt>tweening</dt>
 <dd>A function in animation tools for automatically creating frames between a start and end frame.</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startU">U</h2>
 <dl>
 <dt>Unix</dt>
@@ -260,12 +333,15 @@ h2 {
 <dd>Universal Resource Locator; the address of a document or resource on the World Wide Web</dd>
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startV">V</h2>
 <dl>
 <dt>vector image</dt>
 <dd>A graphic that uses mathematical equations to define shapes and fills. Vector images can be resized without change in quality.</dd>
 </dl>
+
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startW">W</h2>
 <dl>
 <dt>W3C</dt>
@@ -276,6 +352,7 @@ h2 {
 
 </dl>
 <p><a href="#top">TOP</a></p>
+
 <h2 id="startX">X</h2>
 <dl>
 <dt>XHTML</dt>
@@ -284,12 +361,12 @@ h2 {
 <dt>XML</dt>
 <dd>eXtensible Markup Language; a metalanguage for creating custom markup languages</dd>
 </dl>
+
 <p><a href="#top">TOP</a></p>
-</body>
-</html>
 
 
 
+</body></html>
 
 
 
@@ -412,267 +489,8 @@ h2 {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  
+    
 
 
 
