--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -64,7 +64,7 @@ h2 {
 </style>
 
 
-<h1><img src="./index 2_files/blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
+<h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
 
 <h2>The Restaurant</h2>
 <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest local ingredients.</p>
@@ -81,7 +81,7 @@ midnight</p>
 "This place is amazing and the food here is super delicious."-Melinell F.
 
 
-<center><a href="file:///C:/Users/Admin/Pictures/Fundamentals%20of%20Interactive%20Design/Black%20Goose%20Bistro%20Complete/Complete/pizza.html"><img src="./index 2_files/order pizza buttom.gif" alt="lightup pizza text" width="200 px"></a></center>
+<center><a href="pizza.html"><img src="order pizza buttom.gif" alt="lightup pizza text" width="200 px"></a></center>
 
 <footer>
   <center>Please visit our social media pages</center>
