--- a/blackgoose/jenskitchen/recipes/pasta/linguine.html
+++ b/blackgoose/jenskitchen/recipes/pasta/linguine.html
@@ -1,39 +1,108 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Jen's Kitchen: Linguine with Clam Sauce</title>
-<style> 
-    body {
-      background-color: #E7FEFF;
-      margin: 0 10%;
-      font-family: sans-serif;
-         }
-    h1 {
-      text-align: center;
-      font-family: serif;
-      font-weight: normal;
-      text-transform: uppercase;
-      border-bottom: 1px solid #57b1dc;
-      margin-top: 30px;
-    }
-    h2 {
-      color: #d1633c;
-      font-size: 1.5em;
-    }
-  </style>
-</head>
+<!-- saved from url=(0055)https://clerjeau.github.io/fid/blackgoose/linguine.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<body>
+<title>Jen's Kitchen: Linguine with Clam Sauce</title>
+</head><body><div class="list">
+  <a href="../../../index.html">Home</a>
+  <a href="../../news.html">News</a>
+  <a href="../../about.html">About Jen</a>
+  <a href="../../gallery/gallery.html">Gallery</a>
+  <a href="../../glossary.html">Glossary</a>   
+  </div>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Kurale&display=swap');
+body {
+  background-color: #E7FEFF;
+  margin: 0 10%;
+  font-family: sans-serif;
+  }
+
+h1 {
+  text-align: center;
+  font-family: 'Kurale',serif;
+  text-transform: ;
+  border-bottom: 5px solid #57b1dc;
+  margin-top: 30px;
+}
+
+h2 {
+  color: #194d8c;
+  font-size: 30px;
+}
+
+div.review {
+    color:#194d8c;
+    text-align: left;
+}
+.food {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  background-color: ;
+}
+
+.food a {
+  display: block;
+  color: #d28840;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+
+.food a:hover {
+  background-color: #194d8c;
+  color: white;
+}
+
+.food a.active {
+  background-color:  #b1773f;
+  color: white;
+}
+.list a:hover {
+  background-color: #d28840;
+  color: white;
+}
+.list {
+    font-size: 20px;
+}
+.list {
+  background-color: ;
+  overflow: hidden;
+}
+
+
+.list a {
+  float: left;
+  color: #194d8c;
+  text-align: center;
+  padding: 14px 16px ;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+
+.list a:hover {
+  background-color: #d28840;
+  color: black;
+}
+
+
+.list a.active {
+  background-color:  #194d8c;
+  color: white;
+}
+
+.list a.active {
+  background-color:  #194d8c;
+  color: white;
+}
+</style>
+
+
 <h1>Linguine with Clam Sauce</h1>
-<ul>  
-  <li><a href="../../../index.html">Home</a></li>
-  <li><a href="../../news.html">News</a></li>
-  <li><a href="../../about.html">About Jen</a></li>
-  <li><a href="../../gallery/gallery.html">Gallery</a></li>
-  <li><a href="../../glossary.html">Glossary</a></li>
-  
-  </ul>
+
 <p>I don't know how authentic this recipe is, but it's quick and delicious. You can make it lactose-free by substituting a dairy-free margarine (we like Earth's Balance) for the butter. (Unfortunately, butter is better.) This recipe serves 2.</p>
 <ul>
   <li>2 cans chopped clams (tuna-sized cans)</li>
@@ -52,12 +121,13 @@
   <li> Taste the clam sauce and add salt and pepper to taste. If you're using butter, add one last tablespoon or two to bind the sauce (if you're using margarine, don't bother).</li>
 </ol>
 
+
 <p><a href="../../../index.html">[Back to the home page]</a></p>
-  <p><a href="../../about.html">About Jens Kitchen</a></p>
+  <p><a href="couscous.html">Try Couscous Salad with Peas and Mint</a></p>
+  <p><a href="http://www.allrecipes.com">Go to Allrecipes.com</a></p>
 
-</body>
-</html>
 
+</body></html>
 
 
 
@@ -204,242 +274,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  
+    
 
 
 
