--- a/blackgoose/jenskitchen/recipes/salmon.html
+++ b/blackgoose/jenskitchen/recipes/salmon.html
@@ -1,40 +1,111 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Jen's Kitchen: Garlic Salmon</title>
-<style> 
-    body {
-      background-color: #E7FEFF;
-      margin: 0 10%;
-      font-family: sans-serif;
-         }
-    h1 {
-      text-align: center;
-      font-family: serif;
-      font-weight: normal;
-      text-transform: uppercase;
-      border-bottom: 1px solid #57b1dc;
-      margin-top: 30px;
-    }
-    h2 {
-      color: #d1633c;
-      font-size: 1.5em;
-    }
-  </style>
-</head>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<body>
+<title>Jen's Kitchen: Garlic Salmon</title>
+ </head><body><div class="list">
+  <a href="../../index.html">Home</a>
+  <a href="../news.html">News</a>
+  <a href="../about.html">About Jen</a>
+  <a href="../gallery/gallery.html">Gallery</a>
+  <a href="../glossary.html">Glossary</a>
+  
+  </div>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Kurale&display=swap');
+body {
+  background-color: #E7FEFF;
+  margin: 0 10%;
+  font-family: sans-serif;
+  }
+
+h1 {
+  text-align: center;
+  font-family: 'Kurale',serif;
+  text-transform: ;
+  border-bottom: 5px solid #57b1dc;
+  margin-top: 30px;
+}
+
+h2 {
+  color: #194d8c;
+  font-size: 30px;
+}
+
+div.review {
+    color:#194d8c;
+    text-align: left;
+}
+.food {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  background-color: ;
+}
+
+.food a {
+  display: block;
+  color: #d28840;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+
+.food a:hover {
+  background-color: #194d8c;
+  color: white;
+}
+
+.food a.active {
+  background-color:  #b1773f;
+  color: white;
+}
+.list a:hover {
+  background-color: #d28840;
+  color: white;
+}
+.list {
+    font-size: 20px;
+}
+.list {
+  background-color: ;
+  overflow: hidden;
+}
+
+
+.list a {
+  float: left;
+  color: #194d8c;
+  text-align: center;
+  padding: 14px 16px ;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+
+.list a:hover {
+  background-color: #d28840;
+  color: black;
+}
+
+
+.list a.active {
+  background-color:  #194d8c;
+  color: white;
+}
+
+.list a.active {
+  background-color:  #194d8c;
+  color: white;
+}
+
+</style>
+
+
+
 
 <h1>Garlic  Salmon</h1>
-<ul>  
-  <li><a href="../../index.html">Home</a></li>
-  <li><a href="../news.html">News</a></li>
-  <li><a href="../about.html">About Jen</a></li>
-  <li><a href="../gallery/gallery.html">Gallery</a></li>
-  <li><a href="../glossary.html">Glossary</a></li>
-  
-  </ul>
+
 <p>This is one of my favorite recipes for when folks come over for dinner. I've already shared this popular recipe with many of my friends. The best thing is it's <em>so easy</em> to make!</p>
 
 <ul>
@@ -51,6 +122,7 @@
   <li>I usually serve this with an aromatic rice and a lightly seasoned stir fry.</li>
 </ol>
 
+
 <p><a href="../../index.html">[Back to the home page]</a></p>
 <p><a href="tapenade.html">Go to the Tapenade recipie</a></p>
 </body>
@@ -59,6 +131,7 @@
 
 
 
+</body></html>
 
 
 
@@ -198,244 +271,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  
+    
 
 
 
