--- a/blackgoose/jenskitchen/recipes/tapenade.html
+++ b/blackgoose/jenskitchen/recipes/tapenade.html
@@ -1,45 +1,111 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Jen's Kitchen: Tapenade (Olive Spread)</title>
-<style> 
-    body {
-      background-color: #E7FEFF;
-      margin: 0 10%;
-      font-family: sans-serif;
-         }
-    h1 {
-      text-align: center;
-      font-family: serif;
-      font-weight: normal;
-      text-transform: uppercase;
-      border-bottom: 1px solid #57b1dc;
-      margin-top: 30px;
-    }
-    h2 {
-      color: #d1633c;
-      font-size: 1.5em;
-    }
-  </style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body><div class="list">
+  <a href="../../index.html">Home</a>
+  <a href="../news.html">News</a>
+  <a href="../about.html">About Jen</a>
+  <a href="../gallery/gallery.html">Gallery</a>
+  <a href="../glossary.html">Glossary</a>
+        
+  </div>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Kurale&display=swap');
+body {
+  background-color: #E7FEFF;
+  margin: 0 10%;
+  font-family: sans-serif;
+  }
 
-</head>
+h1 {
+  text-align: center;
+  font-family: 'Kurale',serif;
+  text-transform: ;
+  border-bottom: 5px solid #57b1dc;
+  margin-top: 30px;
+}
 
-<body>
+h2 {
+  color: #194d8c;
+  font-size: 30px;
+}
+
+div.review {
+    color:#194d8c;
+    text-align: left;
+}
+.food {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  background-color: ;
+}
+
+.food a {
+  display: block;
+  color: #d28840;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+
+.food a:hover {
+  background-color: #194d8c;
+  color: white;
+}
+
+.food a.active {
+  background-color:  #b1773f;
+  color: white;
+}
+.list a:hover {
+  background-color: #d28840;
+  color: white;
+}
+.list {
+    font-size: 20px;
+}
+.list {
+  background-color: ;
+  overflow: hidden;
+}
+
+
+.list a {
+  float: left;
+  color: #194d8c;
+  text-align: center;
+  padding: 14px 16px ;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+
+.list a:hover {
+  background-color: #d28840;
+  color: black;
+}
+
+
+.list a.active {
+  background-color:  #194d8c;
+  color: white;
+}
+
+.list a.active {
+  background-color:  #194d8c;
+  color: white;
+}
+</style>
+
 
 <h1>Tapenade (Olive Spread)</h1>
-<ul>  
-  <li><a href="../../index.html">Home</a></li>
-  <li><a href="../news.html">News</a></li>
-  <li><a href="../about.html">About Jen</a></li>
-  <li><a href="../gallery/gallery.html">Gallery</a></li>
-  <li><a href="../glossary.html">Glossary</a></li>
-  
-  </ul>
-<p>This is a really simple dish to prepare and it's always a big hit at parties. My father recommends:</p>
+<div class="review">
+<p><b>This is a really simple dish to prepare and it's always a big hit at parties. My father recommends:</b></p>
 
-<blockquote>
-<p>&ldquo;Make this the night before so that the flavors have time to blend. Just bring it up to room temperature before you serve it. In the winter, try serving it warm.&rdquo;</blockquote>
+
+<blockquote><p>"Make this the night before so that the flavors have time to blend. Just bring it up to room temperature before you serve it. In the winter, try serving it warm."</p></blockquote>
+</div>
+
 <h2>Ingredients</h2>
 
 <ul>
@@ -52,9 +118,10 @@
 <h2>Instructions</h2>
 
 <ol>
-<li>Combine tomatoes and garlic in a food processor. Blend until as smooth as possible.</li>
+<li>Combine tomatoes and garlic in a food processor. Blend until as smooth as possi-ble.</li>
 
-<li>Add capers and olives. Pulse the motor a few times until they are incorporated, but still retain some texture.</li>
+<li>Add capers and olives. Pulse the motor a few times until they are incorporated, but still retain some
+texture.</li>
 
 <li>Serve on thin toast rounds with goat cheese and fresh basil garnish (optional).</li>
 </ol>
@@ -63,8 +130,7 @@
   <p><a href="pasta/linguine.html">Try the Linquine with Clam Sauce</a></p>
   <p><a href="http://www.allrecipes.com">Go to Allrecipes.com</a></p>
 
-</body>
-</html>
+</body></html>
 
 
 
@@ -211,238 +277,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  
+    
 
 
 
